<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/cl_item_list"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="10dp"
  android:background="@drawable/bg_corner_radius_20dp"
  android:backgroundTint="@color/bg_list_item"
  android:orientation="horizontal"
  android:padding="10dp">

  <ImageView
    android:id="@+id/iv_small_icon"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_corner_radius_10dp"
    android:backgroundTint="@color/bg_small_icon"
    android:contentDescription="@string/text_content_description_icon_of_image_small_size"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_name_item"
    style="@style/text_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="SES-22"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/iv_small_icon"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/cores_flight_title"
    style="@style/text_attributes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp"
    android:text="@string/text_main_list_item_cores_flight"
    app:layout_constraintEnd_toStartOf="@id/tv_cores_flight"
    app:layout_constraintStart_toEndOf="@id/iv_small_icon"
    app:layout_constraintTop_toBottomOf="@id/tv_name_item" />

  <TextView
    android:id="@+id/tv_cores_flight"
    style="@style/text_attributes"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    android:gravity="start"
    android:text="2"
    android:textAlignment="textStart"
    android:textStyle="italic"
    app:layout_constraintEnd_toStartOf="@id/tv_status_title"
    app:layout_constraintStart_toEndOf="@id/cores_flight_title"
    app:layout_constraintTop_toTopOf="@id/cores_flight_title" />

  <TextView
    android:id="@+id/tv_status_title"
    style="@style/text_attributes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/text_main_list_item_status"
    app:layout_constraintEnd_toStartOf="@+id/tv_status"
    app:layout_constraintStart_toEndOf="@id/tv_cores_flight"
    app:layout_constraintTop_toTopOf="@id/cores_flight_title" />

  <TextView
    android:id="@+id/tv_status"
    style="@style/text_attributes"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:text="false"
    android:textAlignment="textStart"
    android:textStyle="italic"
    app:layout_constraintEnd_toStartOf="@+id/tv_date"
    app:layout_constraintStart_toEndOf="@id/tv_status_title"
    app:layout_constraintTop_toTopOf="@id/cores_flight_title" />

  <TextView
    android:id="@+id/tv_date"
    style="@style/text_attributes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="2022-07-12"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/tv_status"
    app:layout_constraintTop_toTopOf="@id/cores_flight_title" />

</androidx.constraintlayout.widget.ConstraintLayout>